# somatic-mutations-simulation

./: .gitignore  LICENSE  README.md  environment.yml  main.py  pyproject.toml  run_pipeline.py  run_sensitivity.py  setup.py
notebook/: soma_mut.ipynb  soma_mut_additional.ipynb  soma_mut_regressions.ipynb
src/: __init__.py  model_ii_hazard.py  run_model_ii.py  run_model_iii.py  sensitivity_p_lethal.py
src/hazard_simulation/: model_two_hazard_simulation.py
src/model_three_survival/: model_three_a_st_xt_simulation.py  model_three_b_st_xt_simulation.py  model_three_c_st_xt_simulation.py  simulate.py
src/model_two_curves_simulation/: model_two_xt.py
src/model_two_survival/: model_two_st_simulation.py
src/somatic_mutations_simulation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
src/utils/: __init__.py  conf_base.py  kaplan_meier_utils.py  modeling.py  ode_sim.py  rhs_factory.py
