[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "somatic-mutations-simulation"
version = "0.1.0"
description = "Code for reproducing the somatic mutation simulations article"
authors = [
    {name = "Vlad Fedotov", email = "Vlad.Fedotov@skoltech.ru"},
]
readme = "README.md"
requires-python = ">=3.11, <3.14"
license = {text = "MIT"}

dependencies = [
    "numpy==2.3.3",
    "pandas==2.3.2",
    "scipy==1.16.2",
    "matplotlib>=3.7.0",
    "scikit-learn==1.7.2",
    "seaborn==0.13.2",
    "statsmodels==0.14.5",
    "tqdm==4.67.1",
    "openpyxl==3.1.5"
]

[project.optional-dependencies]
notebooks = [
    "jupyter==1.1.1",
    "notebook==7.4.5",
    "ipykernel==6.30.1",
]

[project.scripts]
run-simulation = "run_pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["utils*"]

[tool.setuptools.package-dir]
"" = "src"
